tests/rosetta/out/Fortran/angle-difference-between-two-bearings-2.f90
! Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
program angle_difference_between_two_bearings_2
  implicit none
  integer, dimension(12,2) :: testCases
  integer :: tc
  integer :: i0
    integer :: diff
  testCases = reshape((/20.0,45.0,(0 - 45.0),45.0,(0 - 85.0),90.0,(0 - 95.0),90.0,(0 - 45.0),125.0,(0 - 45.0),145.0,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036),(0 - 70099.74233810938),29840.67437876723,(0 - 165313.6666297357),33693.9894517456,1174.8380510598456,(0 - 154146.66490124757),60175.77306795546,42213.07192354373/),(/12,2/))
  do i0 = 1, size(testCases)
    tc = testCases(i0)
    print *, angleDiff(tc(((0)+1)),tc(((1)+1)))
  end do
  
  contains
  recursive real function angleDiff(b1,b2) result(res)
    real, intent(in) :: b1
    real, intent(in) :: b2
    diff = (b2 - b1)
    res = ((mod((((mod(diff,360.0) + 360.0) + 180.0)),360.0)) - 180.0)
    return
  end function angleDiff
end program angle_difference_between_two_bearings_2
